webif add tpk install

--- a/web/system_extensions.html
+++ b/web/system_extensions.html
@@ -10,7 +10,7 @@
 					<tr><td nowrap>
 						<a class=linelink2 href=query?gettpkupgrade target=main>_("TPK upgrade (online)")</a>
 						</br></br>
-						<a class=linelink2 href=query?gettpkinstall target=main>_("TPK install (online)")</a>
+						<a class=linelink2 href=query?gettpksection target=main>_("TPK install (online)")</a>
 						</br></br>
 						<a class=linelink2 href=query?gettpktmpinstall target=main>_("TPK tmp (tmp)")</a>
 						</br></br>
