--- a/web/system_extensions.html
+++ b/web/system_extensions.html
@@ -5,18 +5,18 @@
 	</head>
 		<body class=body id="system_extensions">
 			<center>
-				<br><h1>_("Extensions")</h1><br>
+				<br><h1>Erweiterungen</h1><br>
 				<table cellpadding=5 cellspacing=5>
 					<tr><td nowrap>
-						<a class=linelink2 href=query?gettpkupgrade target=main>_("TPK upgrade (online)")</a>
+						<a class=linelink2 href=query?gettpkupgrade target=main>Aktualisieren (Online)</a>
 						</br></br>
-						<a class=linelink2 href=query?gettpksection target=main>_("TPK install (online)")</a>
+						<a class=linelink2 href=query?gettpksection target=main>Installieren (Online)</a>
 						</br></br>
-						<a class=linelink2 href=query?gettpktmpinstall target=main>_("TPK tmp (tmp)")</a>
+						<a class=linelink2 href=query?gettpktmplist&0 target=main>Installieren (tmp)</a>
 						</br></br>
-						<a class=linelink2 href=query?gettpkmediainstall target=main>_("TPK media (media)")</a>
+						<a class=linelink2 href=query?gettpktmplist&1 target=main>Installieren (Lokal)</a>
 						</br></br>
-						<a class=linelink2 href=query?gettpkremove target=main>_("TPK remove")</a>
+						<a class=linelink2 href=query?gettpkremove target=main>Entfernen</a>
 					</td></tr>
 				</table>
 			</center>
