[webif] oscam and xupnpd link in settings page, only static

--- a/web/settings.html
+++ b/web/settings.html
@@ -9,8 +9,8 @@
 				<a class=linelink2 href=query?adjust target=main>_("Adjust")</a> 
 				<!--a class=linelink2 href=query?skinadjust target=main>_("Skin Adjust")</a-->
 				<script language="JavaScript">
-					document.write('<a class=linelink2 href="' + window.location.protocol + '//' + window.location.hostname + ':8888' + window.location.pathname + '" target=main >OScam Webinterface</a> ' );
-					//document.write('<a class=linelink2 href="' + window.location.protocol + '//' + window.location.hostname + ':4044' + window.location.pathname + '" target=main >xupnpd</a> ' );
+					document.write('<a class=linelink2 href="' + window.location.protocol + '//' + window.location.hostname + ':8888' + '" target=main >OScam Webinterface</a> ' );
+					document.write('<a class=linelink2 href="' + window.location.protocol + '//' + window.location.hostname + ':4044' + '" target=main >xupnpd</a> ' );
 				</script>
 			</td></tr>
 		</table>
